--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
+
 [build]
-command = "npm run build"
-publish = "dist"
+  publish = "dist"  # Carpeta donde se construye la app de Vue
+  functions = "netlify/functions"  # Carpeta donde están las funciones
 
-[functions]
-directory = "netlify/functions"
-
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
